--- a/views/auth/adminlogin.ejs
+++ b/views/auth/adminlogin.ejs
@@ -28,10 +28,10 @@
   <main class="container mx-auto px-4 py-8">
     <section class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md">
       <h2 class="text-xl font-semibold mb-4">Login to Your Account</h2>
-      <form action="/auth/login" method="post">
+      <form action="/auth/adminlogin" method="post">
         <div class="mb-4">
-          <label for="email" class="block text-gray-700">Email</label>
-          <input type="email" id="email" name="email" class="w-full p-2 border rounded-md" required>
+          <label for="username" class="block text-gray-700">User</label>
+          <input type="username" id="username" name="username" class="w-full p-2 border rounded-md" required>
         </div>
         <div class="mb-4">
           <label for="password" class="block text-gray-700">Password</label>
@@ -40,7 +40,7 @@
         <div class="mb-4">
           <label for="role" class="block text-gray-700">Login As</label>
           <select id="role" name="role" class="w-full p-2 border rounded-md" required>
-            <option value="student">Student</option>
+            <option value="admin">Admin</option>
           </select>
         </div>
         <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Login</button>
